# sharaku-analyze

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  start.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: predict.ts
frontend/src/components/: BatchTab.tsx  Footer.tsx  Header.tsx  MarketTab.tsx  SingleTab.tsx  StockSearch.tsx  TechnicalTab.tsx  Watchlist.tsx  WheelTab.tsx
frontend/src/i18n/: context.tsx  en.ts  zh.ts
frontend/src/theme/: context.tsx
frontend/src/utils/: apiCache.ts  clipboard.ts  watchlist.ts
sharaku/: __init__.py  config.py  i18n.py
sharaku/lib/: __init__.py  base_predictor.py  data_utils.py  gbm_predictor.py  market_session.py  monte_carlo_predictor.py  prophet_predictor.py  stock_database.py  technical_analyzer.py  visualization.py  wheel_monitor.py
tests/: test_base_predictor.py  test_data_utils.py  test_gbm_predictor.py  test_monte_carlo_predictor.py  test_technical_analyzer.py
