[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharaku-analyze"
version = "0.1.0"
description = "港美股智能预测分析系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.23,<2.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.20",
    "python-multipart>=0.0.5",
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
prophet = ["prophet==1.2.1"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["sharaku*"]
